@@ -4,39 +4,38 @@ from esclog import LogInfo
 from escutil import AssertTrue, knownBug
 
 class ChangeSpecialColorTests(object):
-  """Color reporting isn't officially documented for special colors but works
-  well enough for the test. It responds with mode 4 and a color index 16 or 256
-  higher than what was queried."""
+  """Color reporting is documented for special colors in two ways: using mode
+  4 or mode 5.  For mode 4, the color number is indexed past the maximum number
+  of "ANSI" colors (which must be known for testing).  Mode 5 does not require
+  the test to know the maximum number of colors.  In either case, the response
+  will be of the same form as the query, i.e., same mode and color numbers."""
 
   @knownBug(terminal="iTerm2", reason="Color reporting not implemented.", shouldTry=False)
   def test_ChangeSpecialColor_Multiple(self):
-    """OSC 4 ; c1 ; spec1 ; s2 ; spec2 ; ST"""
+    """OSC 5 ; c1 ; spec1 ; s2 ; spec2 ; ST"""
     esccmd.ChangeSpecialColor("0",
                               "rgb:f0f0/f0f0/f0f0",
                               "1",
                               "rgb:f0f0/0000/0000")
     esccmd.ChangeSpecialColor("0", "?", "1", "?")
-    AssertTrue(escio.ReadOSC("4") in [";16;rgb:f0f0/f0f0/f0f0",
-                                      ";256;rgb:f0f0/f0f0/f0f0"])
-    AssertTrue(escio.ReadOSC("4") in [";17;rgb:f0f0/0000/0000",
-                                      ";257;rgb:f0f0/0000/0000"])
+    AssertTrue(escio.ReadOSC("5") in [";0;rgb:f0f0/f0f0/f0f0"])
+    AssertTrue(escio.ReadOSC("5") in [";1;rgb:f0f0/0000/0000"])
 
     esccmd.ChangeSpecialColor("0",
                               "rgb:8080/8080/8080",
                               "1",
                               "rgb:8080/0000/0000")
     esccmd.ChangeSpecialColor("0", "?", "1", "?")
-    AssertTrue(escio.ReadOSC("4") in [";16;rgb:8080/8080/8080", ";256;rgb:8080/8080/8080"])
-    s = escio.ReadOSC("4")
+    AssertTrue(escio.ReadOSC("5") in [";0;rgb:8080/8080/8080"])
+    s = escio.ReadOSC("5")
     LogInfo("Read: " + s)
-    AssertTrue(s in [";17;rgb:8080/0000/0000", ";257;rgb:8080/0000/0000"])
+    AssertTrue(s in [";1;rgb:8080/0000/0000"])
 
   def doChangeSpecialColorTest(self, c, value, rgb):
     esccmd.ChangeSpecialColor(c, value)
     esccmd.ChangeSpecialColor(c, "?")
-    s = escio.ReadOSC("4")
-    AssertTrue(s in [";" + str(int(c) + 16) + ";rgb:" + rgb,
-                     ";" + str(int(c) + 256) + ";rgb:" + rgb])
+    s = escio.ReadOSC("5")
+    AssertTrue(s in [";" + str(int(c)) + ";rgb:" + rgb])
 
   @knownBug(terminal="iTerm2", reason="Color reporting not implemented.", shouldTry=False)
   def test_ChangeSpecialColor_RGB(self):
